# modbus-kit-test

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
client/: CMakeLists.txt
client/include/: client.hpp  config.hpp
client/src/: client.cpp  config.cpp  main.cpp
server/: CMakeLists.txt
server/include/: config.hpp  device.hpp  server.hpp  session.hpp
server/src/: config.cpp  device.cpp  main.cpp  server.cpp  session.cpp
shared/: CMakeLists.txt
shared/include/: code.hpp  crc.hpp  helper.hpp  request.hpp  response.hpp
shared/src/: crc.cpp  helper.cpp  request.cpp  response.cpp
